# crossplatform-polling

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
app/: config.py  logging_config.py  main.py
app/admin/: routes.py
app/core/: aggregator.py  crypto.py  poll_service.py  schemas.py
app/database/: models.py
docs/: PLAN.md  setup-bots.md
tests/: conftest.py  test_poll_service.py
